opam-version: "2.0"
name: "eugener-test-ocaml"
version: "0.1.0"
synopsis: "test project. don't download"
description: """
Test project. don't downloadtest project. don't downloadtest project. don't downloadtest project. don't download
"""
maintainer: "your-email@example.com"
authors: "Your Name"
license: "MIT"
homepage: "hhttps://github.com/pypi/warehouse"
dev-repo: "git+https://github.com/pypi/warehouse.git"
bug-reports: "https://github.com/pypi/warehouse/issues"



depends: [
  "dune" {>= "2.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
install: [
  ["dune" "install" "-p" name "--prefix=%{prefix}%"]
]