opam-version: "2.0"
name: "eugener-test-ocaml"
version: "0.1.0"
synopsis: "Test project. don't download"
description: """
test project. don't downloadtest project. don't downloadtest project. don't downloadtest project. don't download
"""
maintainer: "your-email@example.com"
authors: "Your Name"
license: "MIT"
homepage: "hhttps://github.com/pypi/warehouse"
dev-repo: "git+https://github.com/pypi/warehouse.git"
bug-reports: "https://github.com/pypi/warehouse/issues"
depends: [
  "ocaml"
  "dune" {>= "3.16"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/username/reponame.git"
